# ubuntu-tox-client

./: CMakeLists.txt  README.md  manifest.json.in
app/: CMakeLists.txt  ColoredImage.qml  MessageBubble.qml  MessageBubble.qml.autosave  RegularMessageDelegate.qml  main.qml  ubuntu-tox-client.desktop.in
app/graphics/: CMakeLists.txt
app/ui/: AboutPage.qml  CMakeLists.txt
backend/: CMakeLists.txt
backend/modules/UbuntuToxClient/: backend.cpp  backend.h  bootstrapnodes.h  cdata.cpp  cdata.h  contactsmodel.cpp  contactsmodel.h  cstring.cpp  cstring.h  friend.cpp  friend.h  message.cpp  message.h  qmldir  toxbackend.cpp  toxbackend.h  typeidbaseclass.cpp  typeidbaseclass.h
backend/modules/UbuntuToxClient/libs/armhf/: libtoxcore.so.0  libtoxcore.so.0.0.0
backend/modules/Ubuntu_Tox_Client/: backend.cpp  qmldir  toxbackend.cpp
backend/modules/Ubuntu_Tox_Client/libs/amd64/: libsodium.so.13.0.2  libtoxcore.so.0.0.0
backend/modules/Ubuntu_Tox_Client/libs/armhf/: libsodium.so.13.0.2
backend/modules/Ubuntu_Tox_Client/libs/i386/: libsodium.so.13  libsodium.so.13.0.2  libtoxcore.so.0.0.0
cmake/: Click.cmake
po/: com.ubuntu.developer.nikwen.ubuntu-tox-client.pot  ro.po
